todo-add-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-add-service
spec:
  selector:
    matchLabels:
      app: todo-add-service
  replicas: 3
  template:
    metadata:
      labels:
        app: todo-add-service
    spec:
      containers:
      - name: todo-add-service
        image: todoaksacrspsingh.azurecr.io/todo-add-service:v1
        ports:
        - containerPort: 8000
