todo-add-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: add
spec:
  selector:
    app: add
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
